2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

PR c++/59641
gcc/cp/
	* call.c (build_conditional_expr_1): Check the return value of
	force_rvalue.
gcc/testsuite/
	* g++.dg/cpp0x/pr59641.C: New file.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206303 138bc75d-0d04-0410-961f-82ee72b054a4